2002-07-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.1.
